--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,31 +1,46 @@
 // Variables
 @import "variables";
-
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
 /* universal */
 
 body {
-  font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial,sans-serif;
+  font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial, sans-serif;
 }
 
 /* header */
 
 .navbar-static-top {
+
   border-color: #e7e7e7;
   background-color: #fff;
   box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
   border-top: 4px solid #00b5ad;
   margin-bottom: 40px;
   margin-top: 0px;
+
+  .dropdown-menu {
+    padding: 0px;
+
+    li a {
+      border-bottom: 1px solid #d8d8d8;
+      line-height: 2.4;
+
+      .glyphicon {
+        margin-right: 8px;
+      }
+    }
+  }
+
 }
 
 /* Sticky footer styles */
 html {
   position: relative;
-  min-height: 100% ;
+  min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
@@ -34,7 +49,7 @@ body {
 .footer {
   position: absolute;
   bottom: 0;
-  width: 100% ;
+  width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #000;
@@ -70,10 +85,34 @@ body {
       margin-bottom: 0px;
     }
   }
+
+  .nav-tabs {
+    margin-bottom: 20px;
+
+    > li.active > a {
+      background-color: #fff;
+    }
+  }
+
+  .list-group {
+    .list-group-item {
+      border: none;
+      margin-bottom: 0px;
+      border-bottom: 1px solid #efefef;
+
+      .meta {
+        color: #b3b3b3;
+      }
+    }
+  }
+
+  .pagination {
+    margin: 12px 0;
+  }
 }
 
 /* Topic Index Page */
-.topics-index-page,.categories-show-page {
+.topics-index-page, .categories-show-page {
   .topic-list {
     .nav > li > a {
       position: relative;
@@ -85,7 +124,7 @@ body {
       color: #444444;
     }
     .meta {
-      font-size:0.9em;
+      font-size: 0.9em;
       color: #b3b3b3;
       a {
         color: #b3b3b3;
